- Fixed a bug in opermode that would make it display a notice on invalid modes
- Fixed a bug where the Found your hostname (cached) message was messed up
- Fixed a memory leak in the new password code
- Fixed a sptr->passwd bug
- Removed the unnecessary param from IsULine() it is now just IsULine(sptr)
- ircsprintf() is now used everywhere
- Fixed the SJB64 bugs that misplaced users
- Removed sendto_helpops and replaced it with sendto_umode
- Added is_chanownprotop() checks if +q +a or +o with 1 loop
- Added chmode +N (no nick changes) (opers, ulines, +o +q or +a can override)
- Added some fixes on the SJB64 crashing bug, and added tokenization in 
  channel messsages (yahooooo!)
- Fixed the /list bug, reported by many people
- Fixed a linking bug (where did that come from)
- Fixed bug where duplicate numerics could occur
- Fixed the hashing bug (thank you ROXnet ...)
- Fixed a wierd channel message bug ||
- Fixed a bug where non-NS servers would crash when linking
- Added TS2ts (supporting the SJB64 stuff), and fixed the !0 timestamp bug
- Fixed the /list only showing 64 channels bug! Also sped /list up in the process
- Probably fixed the hash bug, again.
- Possible fixed some b64 bugs
- Autodetects /usr/sbin/openssl now, thanks trinity
- Tokenized PING and PONG
- Fixes a missing : in SJOIN
- Possible fixed a internal server list bug
- When IRC WebTV bot cannot find a command, it sends it to parse() instead,
  thanks [Real]
- Added burst.c in extras/
- Moved lopt and whowas to anUser (saves 8 bytes for every server)
- Removed aClient->history, not used (saves 4 bytes for every user/server)
- Fixed compile error with SSL
- Fixed a /list and /quit bug
- Fixed the masskill bug with replacing "Server Exists" code.. i removed it
  accidentialy last time
- Added /botserv /bs command, patch by ATHnet.de
- /who's now show +i users for opers in channels, idea by
  Strider@ChatCircuit
- Fixed NO_OPEROVERRIDE bug reported by otherguy